# finance-data-download

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: example_config.json
src/finance_downloader/: __init__.py  __main__.py  cli.py  config.py  runner.py
src/finance_downloader/core/: base_provider.py  models.py  registry.py  storage.py
src/finance_downloader/providers/: __init__.py  alpha_vantage.py  databento_provider.py  eodhd.py  finnhub_provider.py  fred.py  sec_edgar.py  yahoo.py
src/finance_downloader/utils/: logging.py  rate_limiter.py
tests/: conftest.py  test_config.py  test_runner.py  test_storage.py
tests/test_providers/: test_yahoo.py
